--- a/AutoVolumeControl/README
+++ b/AutoVolumeControl/README
@@ -26,6 +26,7 @@ Features:
 * Get amplitude level
 * Checking if headphones connection
 * User sound profiling  
+* Feautre users info can be uploaded to hash for fast searching
 
 Future updates:
 --------------
